--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_CLIENT_ID=148466751338-kkqn0ir1hkr8iuushb987gk25m6bjtr8.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 CLIENT_URL=http://localhost:3000
