--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "speakeasy": "^2.0.0",
     "web-vitals": "^2.1.4"
