--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -14,6 +14,8 @@
   "type": "commonjs",
   "devDependencies": {
     "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "express-session": "^1.18.1"
   }
- 
 }
